[package]
name = "yew-lmth"
version = "0.0.1"
edition = "2021"
authors = ["QiSheng Liu <saplynx@outlook.com>"]
description = ""                                # TODO
repository = ""                                 # TODO
documentation = ""                              # TODO


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.76"
quote = "1.0.35"
syn = { version = "2.0.48", features = ["extra-traits", "full"] }

# Exmaples workspace
[workspace]
resolver = "2"
members = ["examples/counter", "examples/hello_world"]
