[package]
name = "yew-lmth"
version = "0.0.0"
edition = "2021"
authors = ["QiSheng Liu <saplynx@outlook.com>"]
description = "A macro crate for writing HTML-like syntax for Yew application, inspired by Sycamore and Dioxus."
repository = "https://github.com/Saplyn/yew-lmth"
documentation = ""                                                                                               # TODO

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.76"
quote = "1.0.35"
syn = { version = "2.0.48", features = ["extra-traits", "full"] }

# Exmaples workspace
[workspace]
resolver = "2"
members = ["examples/counter", "examples/hello_world", "examples/routing"]
