[package]
name = "yew-lmth"
version = "0.1.0-alpha"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["QiSheng Liu <saplynx@outlook.com>"]
description = "A macro crate for writing HTML-like syntax for Yew application, inspired by Sycamore and Dioxus."
keywords = ["yew", "html", "macro"]
repository = "https://github.com/Saplyn/yew-lmth"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["extra-traits", "full"] }

# Exmaples workspace
[workspace]
resolver = "2"
members = [
    "examples/counter",
    "examples/hello_world",
    "examples/routing",
    "examples/cond",
]
